# ds-demos-zk-proof-of-delivery

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json
.github/workflows/: python-app.yml  python.yml  rust.yml
core/: Cargo.toml
core/src/: lib.rs
frontend/: delivery_claims.json  gen_and_sign_pod.py  prove.py  requirements.txt  test.py  verify.py
frontend/tests/: test_files_exist.py
host/: Cargo.toml  custom_claims.json  test_pk.json
host/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
test_data/: coffee_company_sk.jwk  other_pk_1.jwk  other_pk_2.jwk
