[package]
name = "host"
version = "0.1.1"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.228"
jwt-core = { path = "../core" }
jwt-compact = { version = "0.8", features = ["rsa"] }
borsh = "1.6.0"
serde_json = "1.0.149"
base64 = "0.22.1"
sha2 = "0.10.9"
clap = { version = "4.5.60", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.5"
insta = "1.46.3"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]

[[bin]]
name = "sign_pod"
path = "./src/bin/sign_pod.rs"

[[bin]]
name = "prove"
path = "./src/bin/prove.rs"

[[bin]]
name = "verify"
path = "./src/bin/verify.rs"

[[bin]]
name = "get_fingerprint"
path = "./src/bin/get_fingerprint.rs"

[[bin]]
name = "gen_delivery_claims_file"
path = "./src/bin/gen_delivery_claims_file.rs"

[[bin]]
name = "tui"
path = "./src/bin/tui.rs"
